<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.activity.LoginActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_analytics"
        app:layout_constraintBottom_toTopOf="@+id/usernameTextInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/usernameInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_label"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_label"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/loginButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_default"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout">

        <Button
            android:id="@+id/loginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_default"
            android:background="@drawable/rounded_login_button"
            android:elevation="4dp"
            android:text="@string/label_login"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/registerButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_up"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>